# titanic-kaggle

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  run_test_pipeline.py  setup.py  test.py  tox.ini
.github/workflows/: deploy-heroku.yml  pre-commit.yaml  push-package.yml
pipelines/: training_pipeline.py
requirements/: requirements-dev.in  requirements-dev.txt  requirements-serving.in  requirements-serving.txt  requirements.in  requirements.txt  test_requirements.txt
scripts/: create_zenml_stack.sh  delete_zenml_stack.sh  get_dataset.sh  get_datasets.sh  install_dependencies.sh  publish_model.sh  run_service.sh
steps/evaluator/: evaluator.py
steps/loader/: pandas_data_loader.py
steps/splitter/: sklearn_data_splitter.py
steps/trainer/: sklearn_trainer.py
tests/: test_predictions.py
titanic_api/: Dockerfile  README.md  draft_deploying_pipeline.py  run_deploying_pipeline.py  service.py
titanic_api/pipelines/: deploying_pipeline.py
titanic_api/steps/: bento_builder.py  model_fetcher.py
titanic_api/titanic_api/: requirements.txt
titanic_model/: README.md  config.yaml  mlflow_python_model_materializer.py  pipeline.py  polars_materializer.py  predict.py  run_deploying_pipeline.py  run_infering_pipeline.py  run_training_pipeline.py
titanic_model/bento_service/: service.py
titanic_model/config/: core.py
titanic_model/mlflow_model_management/: mlflow_metadata.py  mlflow_model_management.py
titanic_model/model_definition/: preprocessing.py  pytorch_model_pipeline.py  sklearn_model_pipeline.py
(+41 files in other folders)
