[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
fix = true
select = ["D", "E", "F", "I", "N"]
ignore = ["D104", "D105", "N803", "N806"]
fixable = ["E", "F", "I"]
unfixable = []

[tool.ruff.pydocstyle]
convention = "google"

[tool.poetry]
name = "titanic-kaggle"
version = "0.1.0"
description = "Having fun with the Titanic competition"
authors = ["Jordan Delbar <jordandelbar@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "titanic_kaggle" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
zenml = "0.31.0"
numpy = ">=1.23.5,<1.24.0"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"
xgboost = "^1.7.4"
torch = "^1.13.1"
feature-engine = "^1.5.2"
mlflow = "^2.1.1"
mlserver = "^1.2.3"
mlserver-mlflow = "^1.2.3"
protobuf = "^3.7.0"
bentoml = "^1.0.15"
numba = "^0.56.4"
kaggle = "^1.5.12"
polars = "^0.16.8"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.252"
pre-commit = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
